--- a/Sandbox/Sandbox/Views/Home/TheMotherLoadProject.cshtml
+++ b/Sandbox/Sandbox/Views/Home/TheMotherLoadProject.cshtml
@@ -3,22 +3,20 @@
 }
  
 <section class="page-section" id="motherload">
-    <div class="sticky-panel sticky-panel-top white-bg">
-        <div class="main-logo-wrap" style="z-index:200">
-            <a href="~/Index"> <img alt="Natalie Macellaio - Metal Artist, logo" title="home page" src="~/images/bxslider/prev.png" /></a>
-        </div>
-    </div>
      <div class="container">
+         <div class="main-logo-wrap last-page">
+             <a href="~/Index"> <img alt="Natalie Macellaio - Metal Artist, logo" title="home page" src="~/images/bxslider/prev.png" /></a>
+         </div>
         <div class="row">
-
             <article class="col-md-12 showcase-single-content white-bg">
                 <div class="row">
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
-                            <div class="showcase-single-item-inner text-left">                                
-                                <h2 class="black add-top-quarter"><span>The Mother Load Project</span> A network of professional artists, who are also mothers</h2>
-                                <h5 class="font3 black"><a href="http://www.themotherload.org/" target="_blank">www.themotherload.org</a></h5>
-                                <h4 class="font5 dark">Founded by artists and mothers Lesli Robertson and Natalie Macellaio</h4>
+                            <div class="showcase-single-item-inner text-left">
+                                <p class="font5"><span class="color-bg black small">a network of professional artists, who are also mothers</span> </p>
+                                        <h2 class="black add-top-quarter "><span>The Mother Load Project</span></h2>
+                                        <h5 class="font3 black"><a href="http://www.themotherload.org/" target="_blank">www.themotherload.org</a></h5>
+                                        <h4 class="font5 dark">Founded by artists and mothers <br /> Lesli Robertson and Natalie Macellaio</h4>
                             </div>
                         </div>
                     </article>
@@ -30,9 +28,7 @@
                             </div>
                         </div>
                     </article>
-
                 </div>
-
                 <div class="row">
                     <div class="single-project-slider-wrap">
                         <!-- single-project-slider : starts -->
