--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -2,22 +2,19 @@
 <html lang="en">
     <head>
         <title>@ViewBag.Title</title> 
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta content='all' name='robots' />
-        <meta name="description" content="Natallie Macellaio is a Silversmith and Metal Artist working and teaching near Dallas, Texas" />
-        <meta name="keywords" content="Natalie Macellaio" />
-        <meta name="author" content="tosca ragnini" />
-        <!-- if you are going to support IE -->
-        <!--[if IE]> <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'> <![endif]-->
-        <link rel="shortcut icon" href="~/images/favicon/favicon.ico" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Natallie Macellaio is a Silversmith and Metal Artist working and teaching near Dallas, Texas">
+        <meta name="keywords" content="Natalie Macellaio">
+        <meta name="author" content="tosca ragnini">
+       <link rel="shortcut icon" href="~/images/favicon/favicon.ico" />
         <link rel="apple-touch-icon" sizes="57x57" href="~/images/touchicons/apple-touch-icon-57-precomposed" />
         <link rel="apple-touch-icon" sizes="114x114" href="~/assets/touchicons/apple-touch-icon-114-precomposed" />
         <link rel="apple-touch-icon" sizes="72x72" href="~/assets/touchicons/apple-touch-icon-72-precomposed" />
         <link rel="apple-touch-icon" sizes="144x144" href="~/assets/touchicons/apple-touch-icon-144-precomposed" />
         <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet" />
         <link href="~/fonts/fonts.css" rel="stylesheet" />
-       <!-- <link href="~/stylesheets/pace.preload.css" rel="stylesheet">-->
+       <!-- <link href="~/stylesheets/pace.preload.css" rel="stylesheet" />-->
         <link href="~/stylesheets/slimmenu.css" rel="stylesheet" type="text" />
         <link href="~/stylesheets/venobox.css" rel="stylesheet" type="text" />
         <link href="~/stylesheets/jquery.tweet.css" rel="stylesheet" type="text" />
@@ -30,7 +27,7 @@
         <link href="~/stylesheets/main-retina.css" rel="stylesheet" type="text" />
         <link rel="~/stylesheet/less" type="text/css" href="less/color.less" />
         <link rel="~/stylesheet/less" type="text/css" href="less/fonts.less" />
-        <script src="~/less/less-2.0.0.min.js" type="text/javascript"></script>
+        <script src="~/less/less-1.7.3.min.js" type="text/javascript"></script>
         <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,900%7COpen+Sans:400,300,700,800' rel='stylesheet' type='text/css'>
        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -40,8 +37,8 @@
     </head>
     <body class=" whitegray-bg">
         <div class="sticky-panel sticky-panel-top white-bg"></div>
-      <!--  <div class="sticky-panel sticky-panel-right white-bg"></div>
-        <div class="sticky-panel sticky-panel-bottom white-bg"></div>-->
+        <div class="sticky-panel sticky-panel-right white-bg"></div>
+        <div class="sticky-panel sticky-panel-bottom white-bg"></div>
         <header class="masthead visible-lg white-bg">
             <div class="main-logo-wrap">
                 <a href="~/Index"> <img alt="Natalie Macellaio - Metal Artist, logo" title="Natalie Macellaio - Metal Artist, logo" src="~/images/logo.png" /></a>
@@ -59,11 +56,9 @@
                 </div>
                 <nav class="nav-item-wrap">
                     <ul class="main-nav-menu main-nav-menu-effect">
-
                         <li class="trigger-sub-nav">
                             <a class="main-nav-link" href="~/Index">home</a>
                         </li>
-
                         <li class="trigger-sub-nav">
                             <a class="main-nav-link" href="#">work</a>
                             <div class="sub-nav">
@@ -98,21 +93,15 @@
                         </li>
                     </ul>
                 </nav>
-
-                <!-- social icons-->
                 <ul class="social-wrap">
                     <li><a href="#"><img alt="" title="" src="~/images/social/01.png" /></a></li>
                 </ul>
-
         </header>
-
-        <!-- mobile only navigation : starts -->
-        <nav class="mobile-nav hidden-lg">
+            <nav class="mobile-nav hidden-lg">
             <ul class="slimmenu">
                 <li>
                     <a class="sub-collapser" href="~/Index">home</a>
                 </li>
-
                 <li>
                     <a class="sub-collapser" href="">work</a>
                     <ul>
@@ -125,8 +114,7 @@
                         <li><a class="font2 black ease" href="~/Brood">Brood</a></li> 
                         <li><a class="font2 black ease" href="~/Boiling-Over">Boiling-Over</a></li>
                         <li><a class="font2 black ease" href="~/Crack">Crack</a></li>
-                        <li><a class="font2 black ease" href="~/Roach-Study">Roach-Study</a></li>
-                          
+                        <li><a class="font2 black ease" href="~/Roach-Study">Roach-Study</a></li>                        
                     </ul>
                 </li>
                 <li>
@@ -148,13 +136,8 @@
                 </li>
             </ul>
         </nav>
-
-        <div class="mastwrap">
-            
+        <div class="mastwrap">          
             @RenderBody()
-
-
-
             <footer>
                 <div class="add-top-quarter">
                     <div class="float-right">
@@ -163,14 +146,10 @@
                 </div>
             </footer>
         </div>
-
-        <!--check to see if extra jquery needed-->
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-            <script src="~/javascripts/libs/jquery.min.js" type="text/javascript"></script>
+        <script src="~/javascripts/libs/jquery.min.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/jquery.easing.1.3.js" type="text/javascript"></script>
         <script src="~/bootstrap/js/bootstrap.js" type="text/javascript"></script>
-     <!--   <script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script>-->
-
+     <!--  <script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script>--> 
         <script src="~/javascripts/libs/retina.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/device.min.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/jquery.slimmenu.min.js" type="text/javascript"></script>
