--- a/Sandbox/Sandbox/stylesheets/main.css
+++ b/Sandbox/Sandbox/stylesheets/main.css
@@ -31,7 +31,9 @@ h1,h2,h3,h4,h5,h6{
 	margin-top: 0;
 	font-weight: normal;
 }
-
+.last-page {
+    z-index:3000;
+}
 @media (min-width: 1024px) and (max-width: 5000px) {
 	.container{
 		max-width: 960px;
@@ -41,7 +43,7 @@ h1,h2,h3,h4,h5,h6{
 	padding:  0;
 }
 .separator-section{
-	padding: 100px 0;
+	padding: 80px 0;
 }
 .add-top{
 	margin-top: 120px;
