--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -1,33 +1,32 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>@ViewBag.Title</title> 
         <meta charset="utf-8">
+        <title>@ViewBag.Title</title>         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Natallie Macellaio is a Silversmith and Metal Artist working and teaching near Dallas, Texas">
+        <meta name="description" content="Natallie Macellaio is a Silversmith and Metal Artist creating and teaching near Dallas, Texas">
         <meta name="keywords" content="Natalie Macellaio">
         <meta name="author" content="tosca ragnini">
-       <link rel="shortcut icon" href="~/images/favicon/favicon.ico" />
-        <link rel="apple-touch-icon" sizes="57x57" href="~/images/touchicons/apple-touch-icon-57-precomposed" />
-        <link rel="apple-touch-icon" sizes="114x114" href="~/assets/touchicons/apple-touch-icon-114-precomposed" />
-        <link rel="apple-touch-icon" sizes="72x72" href="~/assets/touchicons/apple-touch-icon-72-precomposed" />
-        <link rel="apple-touch-icon" sizes="144x144" href="~/assets/touchicons/apple-touch-icon-144-precomposed" />
-        <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet" />
-        <link href="~/fonts/fonts.css" rel="stylesheet" />
-       <!-- <link href="~/stylesheets/pace.preload.css" rel="stylesheet" />-->
-        <link href="~/stylesheets/slimmenu.css" rel="stylesheet" type="text" />
-        <link href="~/stylesheets/venobox.css" rel="stylesheet" type="text" />
-        <link href="~/stylesheets/jquery.tweet.css" rel="stylesheet" type="text" />
-        <link href="~/stylesheets/navmenu.css" rel="stylesheet" type="text" />
-        <link href="~/stylesheets/jquery.bxslider.css" rel="stylesheet" type="text" />
-        <link href="~/stylesheets/isotope.css" rel="stylesheet" type="text" />
-        <link href="~/stylesheets/intro02.css" rel="stylesheet" type="text" />
-        <link href="~/stylesheets/main.css" rel="stylesheet" type="text" />
-        <link href="~/stylesheets/main-responsive.css" rel="stylesheet" type="text" />
-        <link href="~/stylesheets/main-retina.css" rel="stylesheet" type="text" />
-        <link rel="~/stylesheet/less" type="text/css" href="less/color.less" />
-        <link rel="~/stylesheet/less" type="text/css" href="less/fonts.less" />
-        <script src="~/less/less-1.7.3.min.js" type="text/javascript"></script>
+       <link rel="shortcut icon" href="~/images/favicon/favicon.ico">
+        <link rel="apple-touch-icon" sizes="57x57" href="~/images/touchicons/apple-touch-icon-57-precomposed">
+        <link rel="apple-touch-icon" sizes="114x114" href="~/assets/touchicons/apple-touch-icon-114-precomposed">
+        <link rel="apple-touch-icon" sizes="72x72" href="~/assets/touchicons/apple-touch-icon-72-precomposed">
+        <link rel="apple-touch-icon" sizes="144x144" href="~/assets/touchicons/apple-touch-icon-144-precomposed">
+        <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet">
+        <link href="~/fonts/fonts.css" rel="stylesheet">
+     <!--   <link href="~/stylesheets/pace.preload.css" rel="stylesheet">-->
+        <link href="~/stylesheets/slimmenu.css" rel="stylesheet">
+        <link href="~/stylesheets/navmenu.css" rel="stylesheet"> 
+        <link href="~/stylesheets/isotope.css" rel="stylesheet">
+        <link href="~/stylesheets/venobox.css" rel="stylesheet">
+       <link href="~/stylesheets/jquery.bxslider.css" rel="stylesheet">     
+        <link href="~/stylesheets/intro02.css" rel="stylesheet">
+        <link href="~/stylesheets/main.css" rel="stylesheet">
+        <link href="~/stylesheets/main-responsive.css" rel="stylesheet">
+        <link href="~/stylesheets/main-retina.css" rel="stylesheet">
+        <link rel="~/stylesheet/less" type="text/css" href="less/color.less">
+        <link rel="~/stylesheet/less" type="text/css" href="less/fonts.less">
+        <script src="~/less/less-2.0.0.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,900%7COpen+Sans:400,300,700,800' rel='stylesheet' type='text/css'>
        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -41,7 +40,7 @@
         <div class="sticky-panel sticky-panel-bottom white-bg"></div>
         <header class="masthead visible-lg white-bg">
             <div class="main-logo-wrap">
-                <a href="~/Index"> <img alt="Natalie Macellaio - Metal Artist, logo" title="Natalie Macellaio - Metal Artist, logo" src="~/images/logo.png" /></a>
+                <a href="~/Index"><img alt="Natalie Macellaio - Metal Artist, logo" title="Natalie Macellaio - Metal Artist, home page" src="~/images/logo.png" /></a>
             </div>
             <div class="main-nav">
                 <div class="mobile-toggle">
@@ -50,7 +49,7 @@
                     <span></span>
                 </div>
             </div>
-            <a href="~/Index"><img alt="Natalie Macellaio - Metal Artist, logo" title="Natalie Macellaio - Metal Artist, logo" class="side-logo" src="~/images/side-logo.png" /></a>
+            <a href="~/Index"><img alt="Natalie Macellaio - Metal Artist, logo" title="Natalie Macellaio - Metal Artist, home page" class="side-logo" src="~/images/side-logo.png" /></a>
                 <div class="nav-bio">
                     <h4><span class="color font1">Natalie Macellaio <br />3D Metal Sculptor</span></h4>
                 </div>
@@ -149,7 +148,7 @@
         <script src="~/javascripts/libs/jquery.min.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/jquery.easing.1.3.js" type="text/javascript"></script>
         <script src="~/bootstrap/js/bootstrap.js" type="text/javascript"></script>
-     <!--  <script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script>--> 
+       <!-- <script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script> -->
         <script src="~/javascripts/libs/retina.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/device.min.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/jquery.slimmenu.min.js" type="text/javascript"></script>
