--- a/Sandbox/Sandbox/stylesheets/pace.preload.css
+++ b/Sandbox/Sandbox/stylesheets/pace.preload.css
@@ -5,7 +5,6 @@
   -moz-user-select: none;
   user-select: none;
 }
-
 .pace .pace-progress {
   background-color: #fff;
   height: 10px;
@@ -19,7 +18,6 @@
   -o-transition: width 1s;
   transition: width 1s;
 }
-
 .pace .pace-activity:before {
   content: '';
   background-color: #fff;
@@ -42,11 +40,13 @@
 }
 .pace-running .mast-wrap{
   opacity: 0;
+  display: none;
 }
 .pace-done .mast-wrap{
   opacity: 1;
+  display: block;
 }
-
 .pace-done .pace{
+    opacity: 0;
   display: none;
 }
