--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -115,6 +115,15 @@
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
+                    <img alt="resin brood on post" class="img-responsive" src="~/images/cracks/cracks-14.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Cracks">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Cracks</h3>
+                            <p class="white"><span class="black-bg">Earth to Art Cracks</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
                     <img alt="New Work" class="img-responsive" src="~/images/scribbles/scrib-02.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" title="Yellow and Blue" href="~/images/scribbles/scrib-02.jpg">
                         <div class="works-item-inner valign">
