--- a/Sandbox/Sandbox/Views/Shared/_InternalPageLayout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_InternalPageLayout.cshtml
@@ -17,6 +17,8 @@
   <!--  <link href="~/stylesheets/pace.preload.css" rel="stylesheet">
     <link href="~/stylesheets/slimmenu.css" rel="stylesheet">
    <link href="~/stylesheets/navmenu.css" rel="stylesheet">-->
+    <link href="~/stylesheets/isotope.css" rel="stylesheet">
+    <link href="~/stylesheets/venobox.css" rel="stylesheet">
     <link href="~/stylesheets/jquery.bxslider.css" rel="stylesheet">
     <link href="~/stylesheets/isotope.css" rel="stylesheet">
     <link href="~/stylesheets/main.css" rel="stylesheet">
@@ -42,16 +44,16 @@
    <!--  <script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script>see if needed-->
     <script src="~/javascripts/libs/retina.js" type="text/javascript"></script>
     <script src="~/javascripts/libs/device.min.js" type="text/javascript"></script>
-  <!--  <script src="~/javascripts/libs/jquery.slimmenu.min.js" type="text/javascript"></script>
-  -->  <script src="~/javascripts/libs/classie.js" type="text/javascript"></script>
+   <script src="~/javascripts/libs/jquery.slimmenu.min.js" type="text/javascript"></script>
+   <script src="~/javascripts/libs/classie.js" type="text/javascript"></script>
     <script src="~/javascripts/libs/jquery.touchSwipe.js" type="text/javascript"></script>
     <script src="~/javascripts/libs/equalheights.js" type="text/javascript"></script>
-  <!--  <script src="~/javascripts/libs/isotope.js" type="text/javascript"></script>
-   <script src="~/javascripts/libs/venobox.min.js" type="text/javascript"></script>--> 
+  <script src="~/javascripts/libs/isotope.js" type="text/javascript"></script>
+   <script src="~/javascripts/libs/venobox.min.js" type="text/javascript"></script> 
     <script src="~/javascripts/libs/jquery.bxslider.min.js" type="text/javascript"></script>
     <script src="~/javascripts/custom/equalheights-init.js" type="text/javascript"></script>
     <script src="~/javascripts/custom/isotope-init.js" type="text/javascript"></script>
-<!--    <script src="~/javascripts/custom/venobox-init.js" type="text/javascript"></script>-->
+  <script src="~/javascripts/custom/venobox-init.js" type="text/javascript"></script>
     <script src="~/javascripts/custom/main.js" type="text/javascript"></script>
     <script>
         $(document).ready(function () {
