--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -70,7 +70,9 @@
                                 <a href="~/Brood">Brood</a>
                                 <a href="~/Boiling-Over">Boiling-Over</a>
                                 <a href="~/Crack">Crack</a>
-                                <a href="~/Roach-Study">Roach-Study</a>
+                                <a href="~/Roach-Study">Roach-Study</a>  
+                                <a href="~/Crack">Crack</a>
+                                <a href="~/Occupancy">Occupancy</a>
                             </div>
                         </li>
                         <li class="trigger-sub-nav">
