added new scibbles

--- a/Sandbox/Sandbox/Views/Home/Scribbles.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Scribbles.cshtml
@@ -27,31 +27,72 @@
                         </div>
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Purple Scribble" class="img-responsive custom-overlay" src="../images/scribbles/scrib-01.jpg" />
+                <div class="row">
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Purple Scribble" class="img-responsive" src="../images/scribbles/scrib-01.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Purple Scribble</h3>
                         </div>
                     </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Yellow and Blue Scribble" class="img-responsive custom-overlay" src="../images/scribbles/scrib-02.jpg" />
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Yellow and Blue Scribble" class="img-responsive" src="../images/scribbles/scrib-02.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Yellow and Blue Scribble</h3>
                         </div>
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Blues Scribble" class="img-responsive custom-overlay" src="../images/scribbles/scrib-03.jpg" />
+                <div class="row">
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Blues Scribble" class="img-responsive" src="../images/scribbles/scrib-03.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Blues Scribble</h3>
                         </div>
                     </article>
-                    <article class="col-md-6">
-
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Navy Orange Scribble - front" class="img-responsive" src="../images/scribbles/scrib-08.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Navy Orange Scribble - front</h3>
+                        </div>
                     </article>
-                  </div>
+                </div>
+                <div class="row">
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Turq Purple Scribble - front" class="img-responsive" src="../images/scribbles/scrib-04.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Turq Purple Scribble - front</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Turq Purple Scribble - back" class="img-responsive" src="../images/scribbles/scrib-05.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Turq Purple Scribble - back</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="row">
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Orange Purple Scribble - front" class="img-responsive" src="../images/scribbles/scrib-06.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Orange Purple Scribble - front</h3>
+                        </div>
+                    </article>
+
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Orange Purple Scribble - back" class="img-responsive" src="../images/scribbles/scrib-07.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Orange Purple Scribble - back</h3>
+                        </div>
+                    </article>
+                </div>
+                <div class="row">
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Yellow Purple Scribble - front" class="img-responsive" src="../images/scribbles/scrib-09.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Yellow Purple Scribble - front</h3>
+                        </div>
+                    </article>
+                    
+                </div>
             </article>
         </div>
     </div>
