--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                                 <a href="~/Boiling-Over">Boiling-Over</a>
                                 <a href="~/Crack">Crack</a>
                                 <a href="~/Roach-Study">Roach-Study</a>  
-                                <a href="~/Crack">Crack</a>
+                                <a href="~/Cracks">Cracks</a>
                                 <a href="~/Occupancy">Occupancy</a>
                             </div>
                         </li>
@@ -116,7 +116,9 @@
                         <li><a class="font2 black ease" href="~/Boiling-Over">Boiling-Over</a></li>
                         <li><a class="font2 black ease" href="~/Crack">Crack</a></li>
                         <li><a class="font2 black ease" href="~/Roach-Study">Roach-Study</a></li>                        
-                    </ul>
+                        <li><a class="font2 black ease" href="~/Cracks">Cracks</a></li>
+                        <li><a class="font2 black ease" href="~/Occupancy">Occupancy</a></li>
+                     </ul>
                 </li>
                 <li>
                     <a class="sub-collapser" href="">collaborations</a>
