--- a/Sandbox/Sandbox/Views/Home/Cracks.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Cracks.cshtml
@@ -29,13 +29,13 @@
                 </div>
                 <div class="row">
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Silver Cracks in metal -1" class="img-responsive" src="images/cracks/cracks-14.jpg" />
+                        <img alt="Natalie Macellaio - Silver Cracks in metal -1" class="img-responsive" src="~/images/cracks/cracks-14.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Silver Cracks in Metal -1</h3>
                         </div>
                     </article>
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Silver Cracks in metal -2" class="img-responsive" src="images/cracks/cracks-16.jpg" />
+                        <img alt="Natalie Macellaio - Silver Cracks in metal -2" class="img-responsive" src="~/images/cracks/cracks-16.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Silver Cracks in Metal -2</h3>
                         </div>
@@ -43,13 +43,13 @@
                 </div>
                 <div class="row">
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Metal Shifting -1" class="img-responsive" src="images/cracks/cracks-01.jpg" />
+                        <img alt="Natalie Macellaio - Metal Shifting -1" class="img-responsive" src="~/images/cracks/cracks-01.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Metal Shifting -1</h3>
                         </div>
                     </article>
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Silver Cracks in metal -2" class="img-responsive" src="images/cracks/cracks-02.jpg" />
+                        <img alt="Natalie Macellaio - Silver Cracks in metal -2" class="img-responsive" src="~/images/cracks/cracks-02.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Metal Shifting -1</h3>
                         </div>
@@ -57,13 +57,13 @@
                 </div>
                 <div class="row">
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Metal Shifting -4 posts" class="img-responsive" src="images/cracks/cracks-03.jpg" />
+                        <img alt="Natalie Macellaio - Metal Shifting -4 posts" class="img-responsive" src="~/images/cracks/cracks-03.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Metal Shifting - 4 posts</h3>
                         </div>
                     </article>
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Shifting - Ouch -1" class="img-responsive" src="images/cracks/cracks-05.jpg" />
+                        <img alt="Natalie Macellaio - Shifting - Ouch -1" class="img-responsive" src="~/images/cracks/cracks-05.jpg" />
                         <div class="showcase-thumb-strip-inner">                           
                             <h3 class="black">Shifting Ouch -1</h3>
                         </div>
@@ -71,13 +71,13 @@
                 </div>
                 <div class="row">
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Shifting - Ouch -2" class="img-responsive" src="images/cracks/cracks-04.jpg" />
+                        <img alt="Natalie Macellaio - Shifting - Ouch -2" class="img-responsive" src="~/images/cracks/cracks-04.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Shifting - Ouch -2</h3>
                         </div>
                     </article>
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Shifting - Metal Block" class="img-responsive" src="images/cracks/cracks-06.jpg" />
+                        <img alt="Natalie Macellaio - Shifting - Metal Block" class="img-responsive" src="~/images/cracks/cracks-06.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Shifting - Metal Block</h3>
                         </div>
@@ -85,13 +85,13 @@
                 </div>
                 <div class="row">
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Running Trail" class="img-responsive" src="images/cracks/cracks-07.jpg" />
+                        <img alt="Natalie Macellaio - Running Trail" class="img-responsive" src="~/images/cracks/cracks-07.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Running Trail</h3>
                         </div>
                     </article>
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Courtyard" class="img-responsive" src="images/cracks/cracks-11.jpg" />
+                        <img alt="Natalie Macellaio - Courtyard" class="img-responsive" src="~/images/cracks/cracks-11.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Shifting - Courtyard</h3>
                         </div>
@@ -99,13 +99,13 @@
                 </div>
                 <div class="row">
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Shifting - Ouch -2" class="img-responsive" src="images/cracks/cracks-12.jpg" />
+                        <img alt="Natalie Macellaio - Shifting - Ouch -2" class="img-responsive" src="~/images/cracks/cracks-12.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Shifting  Hinge</h3>
                         </div>
                     </article>
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Shifting - Metal Block" class="img-responsive" src="images/cracks/cracks-13.jpg" />
+                        <img alt="Natalie Macellaio - Shifting - Metal Block" class="img-responsive" src="~/images/cracks/cracks-13.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Shifting - Stones</h3>
                         </div>
@@ -113,13 +113,13 @@
                 </div>
                 <div class="row">
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Metal in Wall -1" class="img-responsive" src="images/cracks/cracks-10.jpg" />
+                        <img alt="Natalie Macellaio - Metal in Wall -1" class="img-responsive" src="~/images/cracks/cracks-10.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Shifting  Metal in Wall -1</h3>
                         </div>
                     </article>
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Shifting - Metal in Wall -2" class="img-responsive" src="images/cracks/cracks-09.jpg" />
+                        <img alt="Natalie Macellaio - Shifting - Metal in Wall -2" class="img-responsive" src="~/images/cracks/cracks-09.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Shifting - Metal in Wall -2</h3>
                         </div>
@@ -127,13 +127,13 @@
                 </div>
                 <div class="row">
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Shifting - Metal on wall" class="img-responsive" src="images/cracks/cracks-18.jpg" />
+                        <img alt="Natalie Macellaio - Shifting - Metal on wall" class="img-responsive" src="~/images/cracks/cracks-18.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Shifting  - Metal on Wall</h3>
                         </div>
                     </article>
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Shifting - Metal on Wall -2" class="img-responsive" src="images/cracks/cracks-17.jpg" />
+                        <img alt="Natalie Macellaio - Shifting - Metal on Wall -2" class="img-responsive" src="~/images/cracks/cracks-17.jpg" />
                         <div class="showcase-thumb-strip-inner">
                             <h3 class="black">Shifting - Metal on Wall -2</h3>
                         </div>
